# OpenJLPT

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  NOTICE.md  README.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  update-data.yml
data/: openjlpt.sqlite
data/csv/: grammar-n1.csv  grammar-n2.csv  grammar-n3.csv  grammar-n4.csv  grammar-n5.csv  kanji-n1.csv  kanji-n2.csv  kanji-n3.csv  kanji-n4.csv  kanji-n5.csv  vocab-n1.csv  vocab-n2.csv  vocab-n3.csv  vocab-n4.csv  vocab-n5.csv
data/json/grammar/: n1.json  n2.json  n3.json  n4.json  n5.json
data/json/kanji/: n1.json  n2.json  n3.json  n4.json  n5.json
data/json/vocab/: n1.json  n2.json  n3.json  n4.json  n5.json
openjlpt/: __init__.py  _data.py  _models.py  _sqlite.py
schema/: grammar.schema.json  kanji.schema.json  vocab.schema.json
scripts/: build-grammar.ts  build-kanji.ts  build-sqlite.ts  build-vocab.ts  fetch-sources.ts  validate.ts
scripts/lib/: examples.ts  util.ts
sources/grammar/: README.md  n1.json  n2.json  n3.json  n4.json  n5.json
src/: index.ts
tests/: test_openjlpt.py
